@@ -2,6 +2,7 @@
 ========
 - A command line option --fullscreen was added to put a new window into
   fullscreen mode automatically.
+- Users can open only one preferences dialog per terminal window now.
 
 
 0.2.0
