@@ -1,3 +1,8 @@
+2004-12-06	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-window.c: Users can open only one preferences
+	  dialog per terminal window. This fixes bug #27.
+
 2004-12-04	Benedikt Meurer <benny@xfce.org>
 
 	* doc/C/: Fix link.
